--- a/site.css
+++ b/site.css
@@ -121,3 +121,9 @@ section#films a {
   border-radius: 5px;
   border: 1px solid var(--dark2);
 }
+
+#crawl {
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-bottom: 50px;
+}
